# tao

./: README.md  docker-compose.yml  tao-staging-raw.json  tao-staging.json
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
pallets/organization/: Cargo.toml
pallets/organization/src/: lib.rs  mock.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
